--- a/templates/base.html
+++ b/templates/base.html
@@ -99,7 +99,9 @@
                         <a class="nav-link dropdown-toggle" href="#" id="beansDropdown" role="button" 
                            data-bs-toggle="dropdown" data-bs-auto-close="outside">
                             <div class="nav-icon">
-                                <i class="bi bi-bag-fill"></i>
+                                <img src="{{ url_for('static', filename='img/bean_icon.png') }}" 
+                                     alt="Beans" 
+                                     class="nav-icon-img">
                             </div>
                             <span class="nav-text">Beans</span>
                         </a>
