--- a/templates/machines.html
+++ b/templates/machines.html
@@ -21,7 +21,7 @@
                     data-bs-target="#semi-auto" 
                     type="button" 
                     role="tab">
-                <i class="bi bi-cpu me-2"></i>Semi-Automatic
+                Semi-Automatic
             </button>
         </li>
         <li class="nav-item" role="presentation">
@@ -31,7 +31,7 @@
                     data-bs-target="#fully-auto" 
                     type="button" 
                     role="tab">
-                <i class="bi bi-magic me-2"></i>Fully Automatic
+                Fully Automatic
             </button>
         </li>
         <li class="nav-item" role="presentation">
@@ -41,7 +41,7 @@
                     data-bs-target="#pod" 
                     type="button" 
                     role="tab">
-                <i class="bi bi-box me-2"></i>Pod Machines
+                Pod Machines
             </button>
         </li>
     </ul>
